[package]
name = "tipsport_request_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
failure = "0.1.8"
image = "0.24.1"
serde = "1.0.136"
serde_json = "1.0.79"
rocket = "0.5.0-rc.1"
lazy_static = "1.4"
openssl-probe = "0.1.5"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
anyhow = "1.0.56"
tokio = { version = "1", features = ["full"] }
